--- a/package.json
+++ b/package.json
@@ -14,25 +14,25 @@
     "typecheck": "astro check"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.4",
-    "@astrojs/cloudflare": "^12.6.7",
-    "@astrojs/partytown": "^2.1.4",
-    "@astrojs/sitemap": "^3.5.1",
-    "@tailwindcss/vite": "^4.1.13",
-    "astro": "^5.13.5",
-    "gsap": "^3.13.0",
-    "tailwindcss": "^4.1.13"
+    "@astrojs/check": "0.9.4",
+    "@astrojs/cloudflare": "12.6.7",
+    "@astrojs/partytown": "2.1.4",
+    "@astrojs/sitemap": "3.5.1",
+    "@tailwindcss/vite": "4.1.13",
+    "astro": "5.13.5",
+    "gsap": "3.13.0",
+    "tailwindcss": "4.1.13"
   },
   "devDependencies": {
-    "@eslint/js": "^9.35.0",
-    "@typescript-eslint/eslint-plugin": "^8.42.0",
-    "@typescript-eslint/parser": "^8.42.0",
-    "eslint": "^9.35.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-astro": "^1.3.1",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "@eslint/js": "9.35.0",
+    "@typescript-eslint/eslint-plugin": "8.42.0",
+    "@typescript-eslint/parser": "8.42.0",
+    "eslint": "9.35.0",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-astro": "1.3.1",
+    "eslint-plugin-jsx-a11y": "6.10.2",
     "prettier": "3.6.2",
     "prettier-plugin-astro": "0.14.1",
-    "typescript": "^5.9.2"
+    "typescript": "5.9.2"
   }
 }
