Add Main Menu component and Hamburger icon
- Created a new MainMenu component with a basic layout and styling.
- Added a Hamburger icon component with interactive styles for open and closed states.

--- a/.prettierrc
+++ b/.prettierrc
@@ -9,7 +9,7 @@
   "bracketSpacing": true,
   "arrowParens": "avoid",
   "endOfLine": "lf",
-  "plugins": ["prettier-plugin-astro"],
+  "plugins": ["prettier-plugin-astro", "prettier-plugin-tailwindcss"],
   "overrides": [
     {
       "files": "*.astro",
