--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-jsx-a11y": "6.10.2",
     "prettier": "3.6.2",
     "prettier-plugin-astro": "0.14.1",
+    "prettier-plugin-tailwindcss": "0.6.14",
     "typescript": "5.9.2"
   }
 }
